plugins {
    // Apply the java plugin to add support for Java
    id 'java'
}

allprojects {
    group = 'com.jackyblackson'
    version = '2.1.3'

    repositories {
        mavenCentral()
        maven {
            name = "spigotmc-repo"
            url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
        }
        maven {
            url = "https://maven.enginehub.org/repo/"
        }
    }
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }
}
